# django-pretty-response

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  middleware.py  pyproject.toml  ruff.toml
.github/workflows/: main.yml
config/: settings.py  urls.py
django_pretty_response/: middleware.py
pretty_response/: middleware.py
tests/: test_middleware.py  urls.py
